--- a/Tesler.API/nLog.config
+++ b/Tesler.API/nLog.config
@@ -4,12 +4,14 @@
 		  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 		<targets>
-			<target xsi:type="File" name="logfile" fileName="C:\\files\\fileforlog.txt"
+			<target xsi:type="File" name="fileforlog" fileName="C:\files\fileforlog.txt"
 			layout="${longdate} ${level} ${message}" />
 		</targets>
 
 		<rules>
-			<logger name="*" minlevel="Debug" writeTo="logfile" />
+			<logger name="*" minlevel="Info" writeTo="fileforlog" />
 		</rules>
+		<internalLogFile value="C:\files\nlog-internal.log" internalLogLevel="Trace" />
 	</nlog>
+	
 </configuration>
